Do not include unnessary files in the gem package

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ gemfiles/*.lock
 pkg/*
 bin
 vendor/ruby
-gemfiles/vendor/ruby
+../gems/ActiveTranslateSelf/gemfiles/vendor/ruby
 .rbenv-version
 .sass-cache
 .byebug_history
+/.idea
