--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,7 @@ jobs:
           - rails-5.2
           - rails-6.0
           - rails-6.1
-        include:
-          - { ruby: "2.3", gemfile: "rails-4.2", bundler: "1" }
-          - { ruby: "2.4", gemfile: "rails-4.2", bundler: "1" }
-          - { ruby: "3.0", gemfile: "rails-6.1", bundler: "default" }
+          - rails-master
 
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
@@ -27,7 +24,6 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-          bundler: ${{ matrix.bundler }}
           bundler-cache: true # runs `bundle install` and caches gems automatically
       - name: Run tests
         run: bundle exec rake
